[gd_scene load_steps=11 format=2]

[ext_resource path="res://Alibaba-PuHuiTi-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://VersionPanel.gd" type="Script" id=3]
[ext_resource path="res://20ttf.tres" type="DynamicFont" id=4]
[ext_resource path="res://ss_2.jpg" type="Texture" id=5]
[ext_resource path="res://gooey_star_64.png" type="Texture" id=6]
[ext_resource path="res://PP.gd" type="Script" id=7]
[ext_resource path="res://InstalledPanel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1046.0
margin_bottom = 654.0
texture = ExtResource( 5 )
expand = true

[node name="GameList" type="OptionButton" parent="."]
margin_left = 813.0
margin_top = 375.0
margin_right = 987.0
margin_bottom = 428.0
custom_fonts/font = ExtResource( 4 )
text = "游戏列表"

[node name="Run" type="Button" parent="."]
margin_left = 851.0
margin_top = 512.0
margin_right = 1003.0
margin_bottom = 594.0
custom_fonts/font = SubResource( 1 )
text = "启动游戏"

[node name="Label2" type="Label" parent="."]
margin_left = 5.0
margin_top = 32.0
margin_right = 45.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "游戏"

[node name="Left" type="VBoxContainer" parent="."]
margin_top = 62.0
margin_right = 158.0
margin_bottom = 280.0

[node name="ListGame" type="Button" parent="Left"]
margin_right = 158.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "查看游戏"
icon = ExtResource( 6 )

[node name="Version" type="Button" parent="Left"]
visible = false
margin_top = 74.0
margin_right = 158.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
text = "版本列表"
icon = ExtResource( 6 )

[node name="Downlaod" type="Button" parent="Left"]
margin_top = 74.0
margin_right = 158.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
text = "下载"
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 3.0
margin_top = 298.0
margin_right = 43.0
margin_bottom = 326.0
custom_fonts/font = ExtResource( 4 )
text = "通用"

[node name="Left2" type="VBoxContainer" parent="."]
margin_left = -1.0
margin_top = 334.0
margin_right = 157.0
margin_bottom = 552.0

[node name="GlobalSet" type="Button" parent="Left2"]
margin_right = 158.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "全局设置"
icon = ExtResource( 6 )

[node name="VersionPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.745098 )
margin_right = 1042.0
margin_bottom = 647.0
script = ExtResource( 3 )

[node name="VersionList" type="VBoxContainer" parent="VersionPanel"]
margin_left = 182.0
margin_top = 55.0
margin_right = 773.0
margin_bottom = 347.0

[node name="Button2" type="Button" parent="VersionPanel/VersionList"]
margin_right = 591.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "3.2.0"
icon = ExtResource( 6 )

[node name="Button3" type="Button" parent="VersionPanel/VersionList"]
margin_top = 74.0
margin_right = 591.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
text = "2.0.0"
icon = ExtResource( 6 )

[node name="Button4" type="Button" parent="VersionPanel/VersionList"]
margin_top = 148.0
margin_right = 591.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 4 )
text = "1.6.0"
icon = ExtResource( 6 )

[node name="Button5" type="Button" parent="VersionPanel/VersionList"]
margin_top = 222.0
margin_right = 591.0
margin_bottom = 292.0
custom_fonts/font = ExtResource( 4 )
text = "1.3.0"
icon = ExtResource( 6 )

[node name="Back" type="Button" parent="VersionPanel"]
margin_right = 89.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 4 )
text = "<-"

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.745098 )
margin_right = 1023.0
margin_bottom = 599.0
script = ExtResource( 7 )

[node name="Back" type="Button" parent="Panel"]
margin_right = 89.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 4 )
text = "<-"

[node name="Menu" type="VBoxContainer" parent="Panel"]
margin_left = 91.0
margin_top = 83.0
margin_right = 237.0
margin_bottom = 266.0

[node name="Download" type="Button" parent="Panel/Menu"]
margin_right = 146.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "下载"

[node name="Help" type="Button" parent="Panel/Menu"]
margin_top = 38.0
margin_right = 146.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 4 )
text = "帮助"

[node name="About" type="Button" parent="Panel/Menu"]
margin_top = 76.0
margin_right = 146.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 4 )
text = "关于"

[node name="Panel" type="Panel" parent="Panel"]
margin_left = 268.0
margin_top = 24.0
margin_right = 991.0
margin_bottom = 579.0
custom_styles/panel = SubResource( 2 )

[node name="Help" type="ScrollContainer" parent="Panel/Panel"]
visible = false
margin_left = 2.0
margin_top = 1.0
margin_right = 726.0
margin_bottom = 558.0
scroll_horizontal_enabled = false

[node name="Label" type="Label" parent="Panel/Panel/Help"]
margin_right = 629.0
margin_bottom = 803.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "欢迎使用本启动器 下面是使用说明
可以使用的参数列表

help: 获取帮助
例子: help

init: 初始化启动器
例子: init

change_proxy: 更改在线代理
例子: change_proxy fastgithub

download_jre: 下载java
例子: download_jre 8

install_jre: 安装java
例子: install_jre 8

download_game: 下载游戏
例子: download_game v3.0.0

install_game: 安装游戏
例子: install_game v3.0.0

install_offical: 安装游戏到官方目录 你需要先设置offical.json中的内容
例子: install_offical v3.0.0"
align = 1

[node name="Mirror" type="HBoxContainer" parent="Panel/Panel"]
margin_left = 113.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 44.0
custom_constants/separation = 32

[node name="Label" type="Label" parent="Panel/Panel/Mirror"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "版本列表源"

[node name="OptionButton" type="OptionButton" parent="Panel/Panel/Mirror"]
margin_left = 132.0
margin_right = 240.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "ghproxy"
items = [ "ghproxy", null, false, 1, null, "fastgithub", null, false, 1, null ]
selected = 0

[node name="OssDep" type="VBoxContainer" parent="Panel/Panel"]
visible = false
margin_left = 109.0
margin_top = 72.0
margin_right = 600.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="Panel/Panel/OssDep"]
margin_right = 491.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "开源依赖"
align = 1

[node name="Godot" type="HBoxContainer" parent="Panel/Panel/OssDep"]
margin_top = 32.0
margin_right = 491.0
margin_bottom = 66.0
alignment = 2

[node name="Label" type="Label" parent="Panel/Panel/OssDep/Godot"]
margin_top = 3.0
margin_right = 329.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Godot MIT 2014-2022 Godot贡献者"

[node name="View" type="Button" parent="Panel/Panel/OssDep/Godot"]
margin_left = 439.0
margin_right = 491.0
margin_bottom = 34.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "查看"

[node name="TerasologyNim" type="HBoxContainer" parent="Panel/Panel/OssDep"]
margin_top = 70.0
margin_right = 491.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Panel/Panel/OssDep/TerasologyNim"]
margin_top = 3.0
margin_right = 435.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TerasologyLauncher-nim GPL3.0 小沙盒工作室"

[node name="View" type="Button" parent="Panel/Panel/OssDep/TerasologyNim"]
margin_left = 439.0
margin_right = 491.0
margin_bottom = 34.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "查看"

[node name="InstalledPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.745098 )
margin_right = 1042.0
margin_bottom = 647.0
script = ExtResource( 8 )

[node name="VersionList" type="VBoxContainer" parent="InstalledPanel"]
margin_left = 182.0
margin_top = 55.0
margin_right = 773.0
margin_bottom = 347.0

[node name="v1" type="HBoxContainer" parent="InstalledPanel/VersionList"]
margin_right = 591.0
margin_bottom = 70.0

[node name="Button2" type="Button" parent="InstalledPanel/VersionList/v1"]
margin_right = 527.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "3.2.0"
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="InstalledPanel/VersionList/v1"]
margin_left = 531.0
margin_top = 21.0
margin_right = 591.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "未安装"

[node name="v2" type="HBoxContainer" parent="InstalledPanel/VersionList"]
margin_top = 74.0
margin_right = 591.0
margin_bottom = 144.0

[node name="Button3" type="Button" parent="InstalledPanel/VersionList/v2"]
margin_right = 527.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "2.0.0"
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="InstalledPanel/VersionList/v2"]
margin_left = 531.0
margin_top = 21.0
margin_right = 591.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "未安装"

[node name="v3" type="HBoxContainer" parent="InstalledPanel/VersionList"]
margin_top = 148.0
margin_right = 591.0
margin_bottom = 218.0

[node name="Button4" type="Button" parent="InstalledPanel/VersionList/v3"]
margin_right = 527.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "1.6.0"
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="InstalledPanel/VersionList/v3"]
margin_left = 531.0
margin_top = 21.0
margin_right = 591.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "未安装"

[node name="v4" type="HBoxContainer" parent="InstalledPanel/VersionList"]
margin_top = 222.0
margin_right = 591.0
margin_bottom = 292.0

[node name="Button5" type="Button" parent="InstalledPanel/VersionList/v4"]
margin_right = 527.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "1.3.0"
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="InstalledPanel/VersionList/v4"]
margin_left = 531.0
margin_top = 21.0
margin_right = 591.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "未安装"

[node name="Back" type="Button" parent="InstalledPanel"]
margin_right = 89.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 4 )
text = "<-"

[connection signal="item_selected" from="GameList" to="." method="_on_GameList_item_selected"]
[connection signal="pressed" from="GameList" to="." method="_on_GameList_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Left/ListGame" to="." method="_on_ListGame_pressed"]
[connection signal="pressed" from="Left/Downlaod" to="." method="_on_Downlaod_pressed"]
[connection signal="pressed" from="Left2/GlobalSet" to="." method="_on_GlobalSet_pressed"]
[connection signal="pressed" from="VersionPanel/Back" to="VersionPanel" method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Back" to="Panel" method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Menu/Download" to="Panel" method="_on_Download_pressed"]
[connection signal="pressed" from="Panel/Menu/Help" to="Panel" method="_on_Help_pressed"]
[connection signal="pressed" from="Panel/Menu/About" to="Panel" method="_on_About_pressed"]
[connection signal="pressed" from="InstalledPanel/Back" to="InstalledPanel" method="_on_Back_pressed"]
